--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   mesh_gradient: ^1.3.8
+  http: ^1.3.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
