--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   mesh_gradient: ^1.3.8
   http: ^1.3.0
   dio: ^5.8.0+1
+  connectivity_plus: ^6.1.3
+  flutter_background_service: ^5.1.0
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
